--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/modal.css" />
     <title>Jet2 Modal</title>
   </head>
-  <body></body>
+  <body>
+    <!--Trigger button-->
+    <button class="modal-btn-1" data-modal-target="modal1">View Modal</button>
+    <!--Modal-->
+
+    <script src="js/index.js"></script>
+    <script src="js/modal.js"></script>
+  </body>
 </html>
