--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!--Trigger button-->
-    <button class="modal-trigger-btn">
+    <button class="modal-trigger-btn" data-modal-target="modal1">
       View Modal
     </button>
     <!--Modal-->
@@ -22,7 +22,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
           quibusdam? Ullam eveniet voluptatem ea architecto, alias sint
           distinctio repellendus, voluptates sapiente blanditiis minima, at
-          possimus ipsam. Ipsum earum aperiam a.
+          possimus ipsam. Ipsum earum aperiam a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quam earum maiores imped.
         </p>
       </div>
       <div class="modal__divider"></div>
