Adds button functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       View Modal
     </button>
     <!--Modal-->
-    <div class="modal" id="modal1">
+    <div class="modal hidden" id="modal1">
       <div class="modal__content">
         <h3 class="modal__content-header">
           <span class="tick-icon"></span>
