Final styling & colour fixes

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </div>
       <div class="modal__divider"></div>
         <div class="modal__buttons">
-          <button class="modal__buttons-top">Cancel</button>
-          <button class="modal__buttons-bottom" id="continue-btn">Continue</button>
+          <button class="modal__buttons-cancel">Cancel</button>
+          <button class="modal__buttons-continue">Continue</button>
         
     </div>
 
